WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20943
REGRESSION (
r36631
?): Assertion failure in RefCountedLeakCounter::cancelMessageSuppression() when closing a window
https://bugs.webkit.org/show_bug.cgi?id=20943
Summary
REGRESSION (r36631?): Assertion failure in RefCountedLeakCounter::cancelMessa...
mitz
Reported
2008-09-19 11:19:11 PDT
I hit an assertion in RefCountedLeakCounter::cancelMessageSuppression() twice today when closing a Safari window. I cannot reliably reproduce it, though. ASSERTION FAILED: leakMessageSuppressionReasons->contains(reason)
Attachments
patch
(1.70 KB, patch)
2008-09-19 11:25 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-09-19 11:23:34 PDT
I see what's wrong. I forgot to add some code to initWithCoder: that is in initWithFrame:. I'll fix it now.
Darin Adler
Comment 2
2008-09-19 11:25:27 PDT
Created
attachment 23574
[details]
patch
mitz
Comment 3
2008-09-19 11:44:56 PDT
Comment on
attachment 23574
[details]
patch r=me
Darin Adler
Comment 4
2008-09-19 11:47:21 PDT
http://trac.webkit.org/changeset/36668
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug