2008-09-19  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        - speculative fix for https://bugs.webkit.org/show_bug.cgi?id=20943
          Assertion failure in RefCountedLeakCounter::cancelMessageSuppression() when closing a window

        * WebView/WebView.mm:
        (-[WebView _commonInitializationWithFrameName:groupName:]): Moved call to
        RefCountedLeakCounter::suppressMessages in here.
        (-[WebView initWithFrame:frameName:groupName:]): Moved it out of here.



git-svn-id: svn://svn.chromium.org/blink/trunk@36668 bbb929c8-8fbe-4397-9dbb-9b2b20218538